# Progetto-Programmazione

./: CMakeLists.txt  Collection.cpp  Collection.h  CollectionObserver.cpp  CollectionObserver.h  ConcreteObserver.cpp  ConcreteObserver.h  Note.cpp  Note.h  Observer.h  Subject.h  collection.cpp  collection.h  main.cpp  note.cpp  note.h
test/: CMakeLists.txt  CollectionFixture.cpp  CollectionTest.cpp  NoteFileFixture.cpp  NoteFileTest.cpp  NoteFixture.cpp  NoteTest.cpp  runAllTests.cpp
test/lib/googletest/docs/: advanced.md
test/lib/googletest/googletest/: README.md
